--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
     AutoStudio ! Reparación de Camanances y Parabrisas en San José, Costa Rica. Para visualizar la maravillosa web que hemos
     preparado para usted, porfavor active/utilize javascript! . Un abrazo.
   </noscript>
+  <script src="./static/api_client.js">
+  </script>
   <div id="app"></div>
   <!-- Todo: only include in production -->
   <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
