--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   <!-- Todo: only include in production -->
   <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
   <!-- built files will be auto injected -->
+  <script>document.body.requestFullscreen();</script>
 </body>
 
 </html>
