--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <meta name="theme-color" content="#182b7e">
 
   <!-- Add to home screen for Safari on iOS -->
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="AutoStudio">
@@ -87,7 +88,35 @@
   <!-- Todo: only include in production -->
   <!-- <%= htmlWebpackPlugin.options.serviceWorkerLoader %> -->
   <!-- built files will be auto injected -->
-  <script>document.body.requestFullscreen();</script>
+  <script>
+    window.scrollTo(0, 1);
+    var fullscreenEnabled = document.fullscreenEnabled ||
+      document.msFullscreenEnabled ||
+      document.mozFullScreenEnabled ||
+      document.webkitFullscreenEnabled;
+    function makeFullscreen(element) {
+      if (element.requestFullscreen) {
+        element.requestFullscreen();
+      } else if (element.msRequestFullscreen) {
+        element.msRequestFullscreen();
+      } else if (element.mozRequestFullScreen) {
+        element.mozRequestFullScreen();
+      } else if (element.webkitRequestFullscreen) {
+        element.webkitRequestFullscreen();
+      }
+    }
+    function cancelFullscreen() {
+      if (document.exitFullscreen) {
+        document.exitFullscreen();
+      } else if (document.msExitFullscreen) {
+        document.msExitFullscreen();
+      } else if (document.mozCancelFullScreen) {
+        document.mozCancelFullScreen();
+      } else if (document.webkitCancelFullScreen) {
+        document.webkitCancelFullScreen();
+      }
+    }
+  </script>
 </body>
 
 </html>
